--- a/_config.yml
+++ b/_config.yml
@@ -22,7 +22,7 @@ baidu_site_verification  :  # get baidu_site_verification from https://ziyuan.ba
 # Site Author
 author:
   name             : "Guanmeng Xian"
-  avatar           : "images/android-chrome-512x512.png"
+  avatar           : "images/xgm.jpg"
   bio              : "Lorem ipsum College"
   location         : "Beijing, China"
   employer         :
