--- a/_config.yml
+++ b/_config.yml
@@ -22,7 +22,7 @@ baidu_site_verification  :  # get baidu_site_verification from https://ziyuan.ba
 # Site Author
 author:
   name             : "Guanmeng Xian"
-  avatar           : "images/xgm.jpg"
+  avatar           : "images/android-chrome-512x512.png"
   bio              : "@Computer Science, Chongqing University of Posts and Telecommunications"
   location         : "Chongqing, China"
   employer         :
