--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -6,8 +6,8 @@ main:
   - title: "News"
     url: "/#-news"
 
-  - title: "Publications"
-    url: "/#-publications"
+  # - title: "Publications"
+  #   url: "/#-publications"
 
   - title: "Honors and Awards"
     url: "/#-honors-and-awards"
@@ -15,8 +15,8 @@ main:
   - title: "Educations"
     url: "/#-educations"
 
-  - title: "Invited Talks"
-    url: "/#-invited-talks"
+ #  - title: "Invited Talks"
+ #    url: "/#-invited-talks"
 
-  - title: "Internships"
-    url: "/#-internships"
+ #  - title: "Internships"
+ #    url: "/#-internships"
