--- a/_config.yml
+++ b/_config.yml
@@ -23,7 +23,7 @@ baidu_site_verification  :  # get baidu_site_verification from https://ziyuan.ba
 author:
   name             : "Guanmeng Xian（贤冠萌）"
   avatar           : "images/android-chrome-512x512.png"
-  bio              : "@Computer Science, Chongqing University of Posts and Telecommunications"
+  bio              : "@Intelligent Science, Chongqing University of Posts and Telecommunications"
   location         : "Chongqing, China"
   employer         :
   pubmed           : 
