--- a/_config.yml
+++ b/_config.yml
@@ -21,7 +21,7 @@ baidu_site_verification  :  # get baidu_site_verification from https://ziyuan.ba
 
 # Site Author
 author:
-  name             : "Guanmeng Xian（贤冠萌）"
+  name             : "Guanmeng Xian"
   avatar           : "images/android-chrome-512x512.png"
   bio              : "@Intelligent Science, Chongqing University of Posts and Telecommunications"
   location         : "Chongqing, China"
