--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@
 # `jekyll serve`. If you change this file, please restart the server process.
 
 # Site Settings
-title                    : "Guanmeng Xian"
+title                    : "Xuyang Zhou"
 description              : "Emotion Recognition in Conversations"
 repository               : "gmXian.github.io"
 google_scholar_stats_use_cdn : false
