--- a/_config.yml
+++ b/_config.yml
@@ -7,8 +7,8 @@
 
 # Site Settings
 title                    : "Xuyang Zhou"
-description              : "Emotion Recognition in Conversations"
-repository               : "gmXian.github.io"
+description              : "Computer Vision"
+repository               : "TristanAlkaid.github.io"
 google_scholar_stats_use_cdn : false
 
 # google analytics
@@ -21,14 +21,14 @@ baidu_site_verification  :  # get baidu_site_verification from https://ziyuan.ba
 
 # Site Author
 author:
-  name             : "Guanmeng Xian"
+  name             : "Xuyang Zhou"
   avatar           : "images/android-chrome-512x512.png"
-  bio              : "@Intelligent Science, Chongqing University of Posts and Telecommunications"
+  bio              : "@Computer Science and Technology, Chongqing University of Posts and Telecommunications"
   location         : "Chongqing, China"
   employer         :
   pubmed           : 
   googlescholar    : # "https://scholar.google.com/citations?user=YOUR_GOOGLE_SCHOLAR_ID"
-  email            : "gm_Xian@126.com"
+  email            : "Zhou_Xuyang@qq.com"
   researchgate     :  # e.g., "https://www.researchgate.net/profile/yourprofile"
   uri              :
   bitbucket        :
@@ -37,7 +37,7 @@ author:
   flickr           :
   facebook         :
   foursquare       :
-  github           : "gmXian"
+  github           : "TristanAlkaid"
   google_plus      :
   keybase          :
   instagram        :
