--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -3,20 +3,26 @@ main:
   - title: "About Me"
     url: "/#about-me"
 
-  - title: "Educations"
-    url: "/#-educations"
-
   - title: "News"
     url: "/#-news"
 
-  # - title: "Publications"
-  #   url: "/#-publications"
+  - title: "Educations"
+    url: "/#-educations"
+
+  - title: "Competitions"
+    url: "/#-educations"
 
   - title: "Honors and Awards"
     url: "/#-honors-and-awards"
 
- #  - title: "Invited Talks"
- #    url: "/#-invited-talks"
+  - title: "Honors and Awards"
+    url: "/#-honors-and-awards"
+
+  - title: "Visit Statistics"
+    url: "/#-visit-statistics"
 
  #  - title: "Internships"
  #    url: "/#-internships"
+ 
+  # - title: "Publications"
+  #   url: "/#-publications"
