--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@
 
 # Site Settings
 title                    : "Xuyang Zhou"
-description              : "NLP and CV"
+description              : "CV and NLP"
 repository               : "TristanAlkaid.github.io"
 google_scholar_stats_use_cdn : false
 
