--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -8,6 +8,9 @@ main:
 
   - title: "Educations"
     url: "/#-educations"
+    
+  - title: "Projects"
+    url: "/#-projects"
 
   - title: "Competitions"
     url: "/#-educations"
