--- a/_config.yml
+++ b/_config.yml
@@ -21,7 +21,7 @@ baidu_site_verification  :  # get baidu_site_verification from https://ziyuan.ba
 
 # Site Author
 author:
-  name             : "Xuyang Zhou(周绪洋)"
+  name             : "Xuyang Zhou\n周绪洋"
   avatar           : "images/android-chrome-512x512.png"
   bio              : "@Computer Science and Technology, Chongqing University of Posts and Telecommunications"
   location         : "Chongqing, China"
